force-app/main/default/objects/redwing__Response_Summary__c/redwing__Response_Summary__c.object-meta.xml
<CustomObject>
    <label>Response Summary</label>
    <nameField>
        <displayFormat>RSUM-{0000000}</displayFormat>
        <label>Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>