force-app/main/default/objects/redwing__Response_Summary__c/fields/redwing__Learning_Assignment__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Assignment</label>
    <referenceTo>redwing__Learning_Assignment__c</referenceTo>
    <relationshipLabel>Response Summaries</relationshipLabel>
    <relationshipName>Response_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>