force-app/main/default/objects/redwing__Response_Summary__c/fields/redwing__Summary__c.field-meta.xml
<CustomField>
    <fullName>redwing__Summary__c</fullName>
    <label>Summary</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>